--- a/.gitignore
+++ b/.gitignore
@@ -127,8 +127,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-.mlopsvenv
-mlopsvenv/
+.mlopvenv
+mlopvenv/
 
 # Spyder project settings
 .spyderproject
@@ -160,3 +160,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Ignore
+.gitignore
